--- a/index.html
+++ b/index.html
@@ -11,5 +11,24 @@
     <!-- Js -->
     <script type="module" src="/src/js/script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="image-container">
+        <img
+          src="assets/imgs/image-qr-code.png"
+          alt="QR Code"
+          class="qrcode_image"
+        />
+      </div>
+      <div class="component-body">
+        <h3 class="component-title">
+          Improve your front-end skills by building projects
+        </h3>
+        <p class="component-paragraph">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
